resolve the  bug in the Description list alignment

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -152,8 +152,8 @@ dt {
 }
 
 dd {
+  margin-right: 0;
   margin-bottom: .5rem;
-  margin-left: 0; // Undo browser default
 }
 
 blockquote {
